# nara-ai-project

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  requirements-cpu-optimized.txt  requirements-ml.txt  requirements-rocm.txt  requirements.txt  run.bat  run.py  run.sh  run_cpu.bat  setup.bat  tsconfig.json  vercel.json
.claude/agents/: backend-engineer.md  infra-engineer.md  ml-engineer.md  project-lead.md  qa-engineer.md
.github/workflows/: ci.yml
_workspace/: 00_architecture.md  05_qa_report.md  99_integration_report.md  benchmark_report.json  test_benchmark.json
_workspace/audit/: 3ec78196-ccdf-48e6-8fb1-352a77455691_audit.json
add/: 개발계정 상세보기 _ 공공데이터포털.mhtml  공공데이터포털_인증키_설정_매뉴얼.md  분류체계정보_기능별분류.csv  분류체계정보_목적별분류.csv  한국문화정보원_문화예술정보 분류체계 정보_20210331(여부수정).csv  행정안전부_정부기능별분류체계_20241130.csv
api/: __init__.py  app.py  index.py  lambda_handler.py  server.py
aws/: Dockerfile  deploy.sh  template.yaml
config/: ds_zero3.json  hardware_profiles.py  mcp-registry.json  settings.py
config/training/: dpo_config.yaml  ocr_config.yaml  sft_config.yaml
data/db/: cpu_vectors.pkl  demo_vectors.pkl
data/test/: classification_test.jsonl  ocr_test.jsonl
docs/: DEPLOY_GUIDE.md  GITHUB_DEPLOY.md  NARA-AI-과제기획서.pptx  WINDOWS_GUIDE.md  create_presentation.cjs
docs/prd/: product-requirements.md
docs/tdd/: technical-design.md
harness/: harness.ts
infra/docker/: Dockerfile.cpu  Dockerfile.mcp  Dockerfile.ml  Dockerfile.rocm  milvus.yml  (+2 more)
public/: index.html
src/: __init__.py  main.py
static/: index.html
tests/: conftest.py
(+96 files in other folders)
